syntax = "proto3";

option csharp_namespace = "IntelliCook.RecipeSearch.Client";

message FaissIndexThreadRequest {

}

message FaissIndexThreadResponse {
    FaissIndexThreadStatus status = 1;
    optional FaissIndexThreadArgs args = 2;
}

enum FaissIndexThreadStatus {
    UNINITIALIZED = 0;
    IN_PROGRESS = 1;
    FAILED = 2;
    COMPLETED = 3;
}

message FaissIndexThreadArgs {
    uint32 count = 1;
    string model = 2;
    string path = 3;
}